--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
+            <optional>true</optional>
             <version>${mapstruct.version}</version>
         </dependency>
 
