--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,15 @@
         <poi.version>4.1.2</poi.version>
         <netty.version>4.1.45.Final</netty.version>
         <guava.version>29.0-jre</guava.version>
-        <gremlin.version>3.4.6</gremlin.version>
+        <gremlin.version>3.4.8</gremlin.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
     </properties>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.apache.tinkerpop</groupId>
-            <artifactId>gremlin-driver</artifactId>
-            <version>${gremlin.version}</version>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tinkerpop</groupId>
