--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,15 @@
         <webVersion>3.0</webVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>5.2.9.RELEASE</spring.version>
-        <jackson.version>2.11.2</jackson.version>
-        <es.version>7.8.1</es.version>
+        <jackson.version>2.11.3</jackson.version>
         <poi.version>4.1.2</poi.version>
-        <netty.version>4.1.45.Final</netty.version>
-        <guava.version>29.0-jre</guava.version>
+        <netty.version>4.1.53.Final</netty.version>
+        <guava.version>30.0-jre</guava.version>
         <gremlin.version>3.4.8</gremlin.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.1.0</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.tinkerpop</groupId>
             <artifactId>tinkergraph-gremlin</artifactId>
@@ -37,11 +31,12 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-            <optional>true</optional>
+            <scope>provided</scope>
             <version>${mapstruct.version}</version>
         </dependency>
 
@@ -176,7 +171,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.5</version>
+            <version>3.5.6</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -187,12 +182,12 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.73</version>
+            <version>1.2.74</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <version>2.8.6</version>
         </dependency>
 
         <dependency>
@@ -203,12 +198,12 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-poi</artifactId>
-            <version>4.1.12</version>
+            <version>5.4.5</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-crypto</artifactId>
-            <version>4.1.12</version>
+            <version>5.4.5</version>
         </dependency>
 
         <dependency>
@@ -245,12 +240,12 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.9.1</version>
+            <version>4.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.2.1</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tika</groupId>
