--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <webVersion>3.0</webVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.2.9.RELEASE</spring.version>
+        <spring.version>5.3.0</spring.version>
         <jackson.version>2.11.3</jackson.version>
         <poi.version>4.1.2</poi.version>
         <netty.version>4.1.53.Final</netty.version>
