--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
             <artifactId>mybatis-spring</artifactId>
             <version>2.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.47</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
