--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://192.168.4.30:3306/meta_boot?characterEncoding=utf8&amp;autoReconnect=true&amp;failOverReadOnly=false&amp;&useSSL=false
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://192.168.4.30:3306/test?createDatabaseIfNotExist=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false&serverTimezone=Asia/Shanghai
 db.user=root
 db.password=root@hiekn
